--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: #000;
+    background-color: #FFFFFF;
     height: 60px;
     width: 100%;
     border-top: 1px solid #CCCCCC;
