--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -5,10 +5,7 @@ header {
     border-bottom: 1px solid #CCCCCC;
     display: flex;
     align-items: center;
-}
-header .logo{
-	width: 142px;
-    height: 60px;
     background: url("../images/logo.png") no-repeat center;
     padding-left: 20px;
+    background-position: left center;
     }
