--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,9 +1,30 @@
 .filters {
+    background-color: white;
+    height: 70px;
+    width: 100%;
     display: flex;
     align-items: stretch;
-    border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;
+    border: 1px solid #DDDDDD;
     padding: 20px 0;
+}
+button {
+    font-size: 18px;
+    background-color: #FF5A5F;
+    color: #FFFFFF;
+    height: 48px;
+    width: 20%;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    opacity: 1; 
+    margin-right: 30px;
+    margin-top: 11px;
+    margin-bottom: 11px;
+    transition: opacity 0.3s ease; 
+}
+
+button:hover {
+    opacity: 0.9; 
 }
 
 .locations,
